fix: align oswald font range with local files

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @font-face {
   font-family: 'Oswald';
   font-style: normal;
-  font-weight: 300 900;
+  font-weight: 400 700;
   font-display: swap;
   src: url('/fonts/oswald-cyrillic.woff2') format('woff2');
   unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
@@ -12,7 +12,7 @@
 @font-face {
   font-family: 'Oswald';
   font-style: normal;
-  font-weight: 300 900;
+  font-weight: 400 700;
   font-display: swap;
   src: url('/fonts/oswald-latin.woff2') format('woff2');
   unicode-range:
